<resources>
    <string name="app_name">MoDo</string>
    <string name="base_activity_not_data">暂无数据</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="pass">跳过</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="pay">支付</string>
    <string name="str_game_find_marked_words">正在努力加载，请稍等…… </string>
    <string name="str_game_cant_connect">无法连接到网络，请检查网络！</string>
    <string name="dialog_btn_text_confirm">确定</string>
    <string name="dialog_btn_text_cancel">取消</string>
    <string name="dialog_btn_text_pass">跳过</string>
    <string name="dialog_content_delete">确定删除？</string>
    <string name="dialog_titile_kindly_reminder">温馨提示</string>
    <string name="dialog_title_input_sms_code">请输入验证码</string>
    <string name="upload_file_upload_success">文件上传成功</string>
    <string name="upload_file_uploading">正在上传…</string>
    <string name="upload_file_please_upload_all">请上传全部图片</string>
    <string name="navi_home">首页</string>
    <string name="navi_scene">现场</string>
    <string name="navi_girlfriend">女朋友</string>
    <string name="navi_myself">我</string>
    <string name="navi_square">主页</string>
    <string name="navi_publish">发布</string>
    <string name="navi_attention">发泄</string>
    <string name="navi_message">活动</string>
    <string name="navi_usercenter">消息</string>
    <string name="sms">短信</string>
    <string name="propt_share_cancel">您取消了%1$s分享</string>
    <string name="propt_share_complete">成功分享到%1$s</string>
    <string name="prevent_duplicate">请稍后发送</string>
    <string name="share_failed_error">分享失败</string>
    <string name="share">分享</string>
    <string name="share_text_format">我在#乐玩游戏#里发现了一款超好玩的游戏！《%1$s》是一款相当不错的#安卓游戏#！快来试试吧！%2$s</string>
    <string name="share_titile">我在#乐玩游戏#里发现了一款超好玩的游戏！</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_topics_category">TopicsCategoryActivity</string>
    <string name="title_activity_topics">TopicsActivity</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="title_activity_dynamic">DynamicActivity</string>
    <string name="dynamic_title">动态详情</string>
    <string name="title_activity_people_nearby">PeopleNearbyActivity</string>
    <string name="title_activity_feedbac">FeedbackActivity</string>
    <string name="title_activity_feedba">FeedbackActivity</string>
    <string name="myself_clean_dialog_title">根据缓存文件的大小，清理时间从几秒到几分钟不等，请耐心等待。</string>
    <string name="setting_clean_end">缓存清理已完成</string>
    <string name="setting_dialog_btnleft">取消</string>
    <string name="setting_dialog_btnright">清除</string>
    <string name="setting_dialog_title">根据缓存文件的大小，清理时间从几秒到几分钟不等，请耐心等待。</string>
    <string name="title_activity_follow">FollowActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_blacklist">BlacklistActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_my_wallet">MyWalletActivity</string>
    <string name="title_activity_with_drawals">WithDrawalsActivity</string>
    <string name="first_withdra_chika">持卡人</string>
    <string name="first_withdra_name">填写持卡人姓名</string>
    <string name="first_withdra_bankname">请输入开户银行</string>
    <string name="first_withdra_idcard">身份证</string>
    <string name="first_withdra_idcard_hint">填写持卡人身份证</string>
    <string name="first_withdra_idnumber">卡号</string>
    <string name="first_withdra_idnumber_hint">填写卡号</string>
    <string name="first_withdra_bank">银行</string>
    <string name="firstwithdra_agree">同意</string>
    <string name="firstwithdra_agree2">《用户协议》</string>
    <string name="title_activity_agreement">AgreementActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switchdra_dialog">设置提现密码 </string>
    <string name="title_activity_release">ReleaseActivity</string>
    <string name="title_activity_enter_money">EnterMoneyActivity</string>
    <string name="title_activity_success_withdra">SuccessWithdraActivity</string>
    <string name="release_custom_text_num">%d/8</string>
    <string name="ac_release_edit_num">%d/600</string>
    <string name="item_dynamic_detail_img_num">%d张</string>
    <string name="title_activity_my_key">MyKeyActivity</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="title_activity_psn_home">PsnHomeActivity</string>
    <string name="title_activity_edit_pers">EditPersActivity</string>
    <string name="title_activity_modify_nickname">ModifyNicknameActivity</string>
    <string name="title_activity_modify_company">ModifyCompanyActivity</string>
    <string name="title_activity_modify_job">ModifyJobActivity</string>
    <string name="title_activity_modify_university">ModifyUniversityActivity</string>
    <string name="title_activity_modify_signature">ModifySignatureActivity</string>
    <string name="title_activity_select_album">SelectAlbumActivity</string>
    <string name="ac_select_album_num">%d/9</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="title_activity_edit_photo">EditPhotoActivity</string>
    <string name="title_activity_photo_big">PhotoBigActivity</string>
    <string name="title_activity_contribute2_topics">Contribute2TopicsActivity</string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_sub_conversation_list_activtiy">SubConversationListActivtiy
    </string>
    <string name="title_activity_authenticate">AuthenticateActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="ac_choose_location_gone_location">不显示位置</string>
    <string name="title_activity_release2_topics">Release2TopicsActivity</string>
    <string name="already_attention_topics">已订阅专题</string>
    <string name="add_new_topics">添加为新专题</string>
    <string name="attention_topics_id">ID：%d</string>
    <string name="title_activity_topics_management">TopicsManagementActivity</string>
    <string name="zan">赞</string>
    <string name="user_does_not_speak">该用户没有发言</string>
    <string name="zan_user_num">%d人点赞</string>
    <string name="title_activity_register_success">RegisterSuccessActivity</string>
    <string name="look_num">%d人看过</string>
    <string name="secrecy">保密</string>
    <string name="up_loading_more">上划加载更多</string>
    <string name="no_more">暂无更多</string>
    <string name="review_hint_text">说点什么吧</string>
    <string name="nearby_dialog_look_all">查看全部</string>
    <string name="nearby_dialog_look_man">只看男</string>
    <string name="nearby_dialog_look_woman">只看女</string>
    <string name="release_dynamic_image_tips">最少要上传一张图片</string>
    <string name="release_dynamic_text_tips">多写点吧</string>
    <string name="release_dynamic_text_exceed">超过字数限制</string>
    <string name="release_success">发布成功</string>
    <string name="delete_success">删除成功</string>
    <string name="cancel_attention">取消关注</string>
    <string name="attention">关注</string>
    <string name="all_topics">所有专题</string>
    <string name="topics_category_people_number">已有%d人参与</string>
    <string name="title_activity_set_pwd_success">SetPwdSuccessActivity</string>
    <string name="title_activity_zan_top">ZanTopActivity</string>
    <string name="zan_top_title_text">赞赏排行榜</string>
    <string name="zantop_my_no_zan">您还未赞赏该动态～</string>
    <string name="zantop_no_people">虚位以待</string>
    <string name="create_topics">创建专题</string>
    <string name="search_more">搜索更多专题</string>
    <string name="ac_topicsnmg_new_subscription">昨日新增订阅人数</string>
    <string name="ac_topicmng_total_subscription">总订阅数</string>
    <string name="ac_topicmng_dealwith_report">处理举报内容</string>
    <string name="ac_topicmng_edit_topics">编辑专题信息</string>
    <string name="ac_topicmng_edit_mng">编辑管理员</string>
    <string name="topics_management">专题管理</string>
    <string name="title_activity_edit_topics">EditTopicsActivity</string>
    <string name="edit_topics">编辑专题</string>
    <string name="save">保存</string>
    <string name="replace_cover">更换封面</string>
    <string name="edit_topics_dateil">点击编辑专题详情描述</string>
    <string name="topics_name">专题名称</string>
    <string name="location_message">位置信息</string>
    <string name="invisiable_location">不在附近显示</string>
    <string name="settings_secret">设为私密专题</string>
    <string name="title_activity_edit_topics_detail">EditTopicsDetailActivity</string>
    <string name="update">更新</string>
    <string name="edit_topics_detail">编辑专题描述</string>
    <string name="enter_detail_hint">输入详情描述</string>
    <string name="title_activity_subscriber">SubscriberActivity</string>
    <string name="subscriber_list">订阅者列表</string>
    <string name="topics_maneger">管理员</string>
    <string name="topics_subscriber">订阅者</string>
    <string name="topics_search_subscriber">搜索订阅者</string>
    <string name="subscriber_change_manager">设为管理员</string>
    <string name="subscriber_change_manager_cancel">取消管理员</string>
    <string name="subscriber_change_manager_exit">退出管理员</string>
    <string name="title_activity_deal_with">DealWithActivity</string>
    <string name="reason">原因</string>
    <string name="shield_report_content">处理举报内容</string>
    <string name="title_activity_report_dynamic">ReportDynamicActivity</string>
    <string name="report_dynamic">举报%s</string>
    <string name="report_reason">请告诉我您举报该%s的理由</string>
    <string name="search_friend">搜索好友</string>
    <string name="friends_find_contacts">发现通讯录好友</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="phone_contacts">手机通讯录</string>
    <string name="has_joined">已加入NEW</string>
    <string name="request2join">邀请加入NEW</string>
    <string name="contacts_invite">邀请</string>
    <string name="loading">加载中</string>
    <string name="conversation_title_text">陌生人</string>
    <string name="report">举报</string>
    <string name="person_dialog_isaddblacklist_title">加入黑名单后，TA将不能与你进行关注 发消息 评论 赞互动。</string>
    <string name="title_activity_set_cachpwd_success">SetCachpwdSuccessActivity</string>
    <string name="friend_unlock_text">相互关注的人</string>
    <string name="repeatedly_zan_tip">不能多次点赞</string>
    <string name="zan_failed">点赞失败</string>
    <string name="zan_success">点赞成功</string>
    <string name="title_activity_my_topics">ac</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="weixinfriendscircle">微信朋友圈</string>
    <string name="weixinfriends">微信好友</string>
    <string name="activity_host_name">主办方：%s</string>
    <string name="activity_address">活动地址：%s</string>
    <string name="text_already_account">已经帐号,直接登录</string>
    <string name="text_ac_choose_register">立即注册</string>
    <string name="text_choose_other">使用社交帐号登录</string>
    <string name="text_next_step">下一步</string>
    <string name="text_register1_tips">使用注册时手机号找回</string>
    <string name="text_qq_friends">QQ好友</string>
    <string name="text_cancel">取 消</string>
    <string name="text_hint_4code">请输入4位验证码</string>
    <string name="attention_num">关注（%s）</string>
    <string name="fans_num">粉丝（%s）</string>
    <string name="erweima">二维码</string>
    <string name="text_praised">我赞过的</string>
    <string name="text_attentioned">我关注的</string>
    <string name="log_out">退出登录</string>
    <string name="text_see_detail">查看活动详情</string>
    <string name="text_activity_title_text">【%1$s】 %2$s</string>
    <string name="activity_time">时间：%s</string>
</resources>