<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_color"
    >
    <View
        android:id="@+id/view_user_info"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:background="@mipmap/bg_title_top"
        />
    <include
        android:id="@+id/title_layout"
        layout="@layout/include_title_lucency"/>


    <org.srr.dev.view.CircleImageView
        android:id="@+id/civ_head"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="30dp"
        android:src="@mipmap/head_defult_man"
        android:layout_marginLeft="16dp"
        />

    <org.srr.dev.view.CircleImageView
        android:id="@+id/civ_sex"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/icon_sex_man_bg"
        android:layout_marginLeft="16dp"
        android:layout_alignBottom="@id/civ_head"
        android:layout_alignRight="@id/civ_head"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_big"
        tools:text="asdfsdfsdf"
        android:layout_toRightOf="@id/civ_head"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small"
        tools:text="asdfsdfsdf"
        android:maxLines="3"
        android:layout_toRightOf="@id/civ_head"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:background="@mipmap/bg_btn_usercenter"
        android:text="个人主页 >"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/text_small"
        android:layout_alignParentRight="true"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="48dp"
        />

    <View
        android:id="@+id/view_fans_top_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"
        android:layout_below="@id/civ_head"
        android:layout_marginTop="32dp"
        />

    <View
        android:id="@+id/view_fans_line"
        android:layout_width="0.5dp"
        android:layout_height="20dp"
        android:background="@color/line_gray"
        android:layout_below="@id/view_fans_top_line"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tv_attention_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:text="@string/attention_num"
        android:textSize="@dimen/text_big"
        android:layout_toLeftOf="@id/view_fans_line"
        android:gravity="center"
        android:layout_below="@id/view_fans_top_line"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/tv_fans_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:text="@string/fans_num"
        android:textSize="@dimen/text_big"
        android:layout_toRightOf="@id/view_fans_line"
        android:gravity="center"
        android:layout_below="@id/view_fans_top_line"
        android:background="@color/white"
        />

    <View
        android:id="@+id/view_fans_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/tv_attention_num"
        />


    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_fans_bottom_line"
        android:background="@color/white"
        android:layout_marginTop="@dimen/spacing_lv2"
        >
        <TextView
            android:id="@+id/tv_zxing"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/btn_erweima"
            android:paddingTop="33dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/erweima"
            android:paddingBottom="21dp"
           />
        <TextView
            android:id="@+id/tv_zan"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_zaned"
            android:paddingTop="33dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/text_praised"
            android:background="@color/white"
            android:paddingBottom="21dp"
            />
        <TextView
            android:id="@+id/tv_attention"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_attentioned"
            android:paddingTop="33dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/text_attentioned"
            android:background="@color/white"
            android:paddingBottom="21dp"
            />

    </LinearLayout>
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:text="二维码"-->
        <!--android:textColor="@color/black"-->
        <!--android:background="@color/white"-->
        <!--android:layout_below="@id/view_zxing_code_top_line"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingLeft="16dp"-->
        <!--/>-->









    <TextView
        android:id="@+id/tv_logoff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/text_normal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        />






</RelativeLayout>